--- a/style/other-films.css
+++ b/style/other-films.css
@@ -30,6 +30,8 @@
 
 .other-films__item {
 	position: relative;
+	width: 100%;
+	padding-bottom: 140%;
 	box-shadow: 0px 0px 10px var(--color-primary);
 	border-radius: 10px;
 	transition: 0.5s ease;
@@ -40,11 +42,17 @@
 }
 
 .other-films__img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	border-radius: 10px;
 }
 
 .other-films__link {
-	position: relative;
+	/* position: relative; */
 	display: block;
 	color: rgb(184, 183, 183);
 }
